<resources>
    <string name="app_name">Earthquakes</string>
    <string name="near_the">Near the</string>
    <string name="no_internet">You need an internet connection.</string>
    <string name="error_400">Error 400: Bed Request</string>
    <string name="json_error">Json Error</string>
    <string name="server_unknown_error">Unknown Error \n Try again later </string>
    <string name="no_earthquakes">No earthquakes\n Try to change parameter in settings</string>

    <string name="settings_menu_item">Settings</string>
    <string name="theme">Theme</string>

    <string name="group_name">Theme</string>

    <string name="theme_picker_key">theme_picker_key</string>
    <string name="theme_picker">Choose the Theme</string>

    <string name="theme_picker_default">Light</string>

    <string name="theme_light_label">Light</string>
    <string name="theme_dark_label">Dark</string>

    <string name="theme_light_value">Light</string>
    <string name="theme_dark_value">Dark</string>

    <string name="settings_title">Earthquake Settings</string>
    <string name="need_internet">You need internet to update</string>

    <string name="use_my_location_key">my_location_key</string>
    <string name="use_my_location_key_default">true</string>
    <string name="use_my_location_title">Use my location</string>

    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Allow location to see earthquakes in your area</string>
    <string name="ok">OK</string>

    <string name="banner_ad_unit_id">ca-app-pub-2203645065011301/4070777279</string>
    <string name="interstitial_id">ca-app-pub-2203645065011301~2594044072</string>

    <string name="date_picker_key">date_picker_key</string>
    <string name="date_picker_label">Select the start date</string>
    <string name="date_picker_default">2.5_week.geojson</string>

    <string name="settings_date_picker_last_hour_label">Last Hour</string>
    <string name="settings_date_picker_last_hour_value">2.5_hour.geojson</string>

    <string name="settings_date_picker_all_day_label">Last Day</string>
    <string name="settings_date_picker_all_day_value">2.5_day.geojson</string>

    <string name="settings_date_picker_all_week_label">Last Week</string>
    <string name="settings_date_picker_all_week_value">2.5_week.geojson</string>

    <string name="settings_date_picker_all_month_label">Last Month</string>
    <string name="settings_date_picker_all_month_value">2.5_month.geojson</string>

</resources>
